Adjusted component selector names.

--- a/src/feedback.html
+++ b/src/feedback.html
@@ -30,6 +30,6 @@
   </div>
   <!-- /SCREENSHOT OPTIONS -->
 </div>
-<adsh-feedback-modal [configuration]="configuration">
+<ngx-bootstrap-feedback-modal [configuration]="configuration">
   <ng-content></ng-content>
-</adsh-feedback-modal>
+</ngx-bootstrap-feedback-modal>
